--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ PGPASSWORD=2002
 PGDATABASE=messenger_bot
 
 # for test
-PGHOST=localhost
-PGPORT=5432
-PGUSER=postgres
-PGPASSWORD=2002
-PGDATABASE=messenger_bot
+PGHOST_TEST=localhost
+PGPORT_TEST=5432
+PGUSER_TEST=postgres
+PGPASSWORD_TEST=2002
+PGDATABASE_TEST=messenger_bot_test
