--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon src/app.js",
     "start": "NODE_ENV=production node src/app.js",
     "migrate": "node-pg-migrate",
+    "migrate:test": "node-pg-migrate -f config/database/test.json",
     "test": "jest --setupFiles dotenv/config -i",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config -i"
   },
@@ -17,7 +18,6 @@
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "jest": "^27.5.1",
     "moment": "^2.29.1",
     "nanoid": "^3.3.1",
     "node-pg-migrate": "^6.2.1",
@@ -26,8 +26,10 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1"
   }
 }
